# CreatureBrains

./: .gitignore  CMakeLists.txt  README.md
BrainGUI/: braingui.properties  braingui.xml
BrainGUI/src/gui/: Controller.java  CritterMapCanvas.java  Main.java  ResizableCanvas.java
BrainGUI/src/model/: CreatureShell.java  Model.java
include/Brains/: Brain.hpp  NPU.hpp  NeuralBrain.hpp  RewardBuffer.hpp
include/Creatures/: AnimalCreature.hpp  Creature.hpp  PetCreature.hpp
include/Server/: WorldServer.hpp
include/Utility/: NeuralUtility.hpp  TrigUtility.hpp
include/World/: AnimalWorld.hpp  PetWorld.hpp  World.hpp
src/: main.cpp
src/Brains/: NPU.cpp  NeuralBrain.cpp  RewardBuffer.cpp
src/Creatures/: AnimalCreature.cpp  PetCreature.cpp
src/Server/: WorldServer.cpp
src/Utility/: NeuralUtility.cpp  TrigUtility.cpp
src/World/: AnimalWorld.cpp  PetWorld.cpp
